changing rich text editor from tiptap, to editor js